samples/_failures_safe/1761040648_ebba19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49c73d00.c: In function ‘main’:
./samples/SAFE/__tmp_49c73d00.c:164:9: error: ‘state’ undeclared (first use in this function); did you mean ‘State’?
  164 |         state
      |         ^~~~~
      |         State
./samples/SAFE/__tmp_49c73d00.c:164:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_49c73d00.c:164:14: error: expected ‘;’ at end of input
  164 |         state
      |              ^
      |              ;
./samples/SAFE/__tmp_49c73d00.c:164:9: error: expected declaration or statement at end of input
  164 |         state
      |         ^~~~~
./samples/SAFE/__tmp_49c73d00.c:164:9: error: expected declaration or statement at end of input
